[package]
name = "orb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
dirs = "5.0.1"
ethers = "2.0.11"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = "1.0.111"
tokio = "1.35.1"
toml = "0.8.8"
